2015-12-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-388

	* Summary: blackbody_radiation_agenda is removed.

	* doc/uguide/Figs/rte/ycalc_flow.odg: Figure updated.

	* doc/uguide/transmission.tex (section{Pure transmission calculations}):
	* doc/uguide/rte_basics.tex (subsection{Emission and absorption vectors}):
	* doc/uguide/rte.tex (subsection{Blackbody and cosmic background
	radiation}): Updated according to removal of blackbody_radiation_agenda.

	* controlfiles/artscomponents/clearsky/TestClearSkyTips.arts:
	* controlfiles/artscomponents/clearsky/TestClearSky2.arts:
	* controlfiles/artscomponents/clearsky/TestClearSky.arts:
	* controlfiles/artscomponents/clearsky/TestBatch.arts:
	* controlfiles/artscomponents/disort/TestDISORT.arts:
	* controlfiles/artscomponents/doit/TestDOITFromIndividualFields.arts:
	* controlfiles/artscomponents/doit/doit_setup.arts:
	* controlfiles/artscomponents/doitbatch/TestDOITBatch.arts:
	* controlfiles/artscomponents/groundbased/TestFgrid.arts:
	* controlfiles/artscomponents/groundbased/TestWinds.arts:
	* controlfiles/artscomponents/groundbased/TestGbased.arts:
	* controlfiles/artscomponents/linemixing/TestLineMixingAndZeeman_50_to_70_GHz.arts:
	* controlfiles/artscomponents/linemixing/TestLineMixingAndZeemanPreCalc_50_to_70_GHz.arts:
	* controlfiles/artscomponents/linemixing/TestLineMixingAndZeeman.arts:
	* controlfiles/artscomponents/linemixing/TestLineMixing.arts:
	* controlfiles/artscomponents/nlte/TestNLTE.arts:
	* controlfiles/artscomponents/montecarlo/TestMonteCarloGeneralGaussian.arts:
	* controlfiles/artscomponents/montecarlo/TestRteCalcMC.arts:
	* controlfiles/artscomponents/regrid/TestRegridFields.arts:
	* controlfiles/artscomponents/stokesrot/TestStokesRotation.arts:
	* controlfiles/artscomponents/wfuns/TestDoitJacobians.arts:
	* controlfiles/artscomponents/wfuns/TestWfuns.arts:
	* controlfiles/artscomponents/ycalcappend/TestYCalcAppend.arts: