@@ -1,3 +1,14 @@
+2015-12-16  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-389
+
+	* src/m_sensor.cc, src/methods.cc:
+
+	Added backend_channel_responseGaussianMultiWidth with takes a Vector of
+	widths, half-widths and grid spacings requested by Lukas.
+
+	Could replace backend_channel_responseGaussian in the future.
+
 2015-12-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-388
